# EmiyaOJ-Cloud

./: .dockerignore  .env.example  .gitignore  Dockerfile.mysql  docker-compose.yml  emiya-oj_final.sql  job.md  pom.xml
EmiyaOJ-Agent/: Dockerfile  pyproject.toml
EmiyaOJ-Agent/src/emiyaoj_agent/: __init__.py  app.py  main.py
EmiyaOJ-Agent/src/emiyaoj_agent/agents/: __init__.py
EmiyaOJ-Agent/src/emiyaoj_agent/agents/judge_feedback/: __init__.py  agent.py  prompts.py
EmiyaOJ-Agent/src/emiyaoj_agent/core/: __init__.py  models.py  registry.py  settings.py
EmiyaOJ-Agent/src/emiyaoj_agent/llm/: __init__.py  base.py  dashscope.py  deepseek.py
EmiyaOJ-Agent/src/emiyaoj_agent/tools/: __init__.py  judge_client.py
EmiyaOJ-Agent/src/emiyaoj_agent/workers/: __init__.py  rabbit_worker.py
EmiyaOJ-Agent/tests/: test_deepseek.py  test_judge_feedback_agent.py  test_registry.py  test_settings.py
EmiyaOJ-Auth/: pom.xml
EmiyaOJ-Blog/: Dockerfile  pom.xml
EmiyaOJ-Chat/: Dockerfile  pom.xml
EmiyaOJ-Common/: pom.xml
EmiyaOJ-Gateway/: Dockerfile  pom.xml
EmiyaOJ-Judge/: pom.xml
EmiyaOJ-Moderation/: Dockerfile  pom.xml
EmiyaOJ-Problem/: pom.xml
EmiyaOJ-common/: pom.xml
EmiyaOJ-gateway/: pom.xml
EmiyaOJ-user/: pom.xml
auth-service/: pom.xml
docs/: Agent接入方案构想.md  Aliyun-moderation-sample.md  Auth-API.md  Blog-API.md  Blog-Moderation-API.md  Contest-API.md  EmiyaOJ-Cloud-技术架构与应用场景说明.html  EmiyaOJ-Cloud-技术架构与应用场景说明.md  EmiyaOJ-Cloud-测试用例表.xlsx  EmiyaOJ-Cloud代码框架说明.md  EmiyaOJ-Cloud数据库设计说明书.md  EmiyaOJ-Cloud概要设计说明书.md  EmiyaOJ-Cloud测试方案与测试用例.md  UML2.0-完整建模.md  (+46 more)
(+362 files in other folders)
