[project]
name = "emiyaoj-agent"
version = "0.1.0"
description = "Extensible Agent workers for EmiyaOJ Cloud"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pika>=1.3.2",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "tenacity>=8.2.3",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
